adds trial pdf format
- prawn gem
- arial font
- trial images
- view file + translations

--- a/app/views/trials/show.html.haml
+++ b/app/views/trials/show.html.haml
@@ -35,7 +35,7 @@
         %li.list-group-item.list-group-item-info
           %h4= @trial.title
         %li.list-group-item
-          %b= t(:deadline)
+          %b= t(:deadline_colon)
           = l(@trial.deadline, format: :month_year)
         %li.list-group-item
           %b= t(:email)
