displays trial penging changes, improves flow
- adds cacheing field to trial - indicates if there are
some pending changes
- show colors/messages in views
- adds simple versions view with changes
- automates pending changes field set on trial/task change
- improves versioning flow (when version is set, which fields are saved)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,7 @@
 
     :javascript
       if (innerWidth > 767) {
-        $('.btn[data-toggle="tooltip"]').tooltip({
+        $('[data-toggle="tooltip"]').tooltip({
          container: 'body'
         })
       }
