--- a/app/views/trials/versions.html.haml
+++ b/app/views/trials/versions.html.haml
@@ -6,7 +6,25 @@
     class: 'btn btn-secondary' do
       %i.fa.fa-arrow-left
       %span= t(:trial)
+    = link_to committee_trial_versions_path(@committee, @trial),
+    method: :delete, data: { confirm: t(:confirm_versions_delete) },
+    class: 'btn btn-success' do
+      %i.fa.fa-check
+      %span= t(:accept_all_changes)
+.ls40.hidden-sm-up
 
-- @trial.versions.each do |version|
-  = version.changeset
-  %br
+.container
+  .row
+    .col-lg-8.offset-lg-2
+      %h2= t(:basic_info)
+      %hr
+      - @trial.versions.each do |version|
+        = render 'change_card', version: version
+      - if @trial.versions.empty?
+        %p= t(:no_changes)
+
+      .ls20
+      %h2= t(:tasks)
+      - @trial.tasks.each do |task|
+        - task.versions.each do |version|
+          = render 'change_card', version: version
