--- a/app/views/trials/new.html.haml
+++ b/app/views/trials/new.html.haml
@@ -5,3 +5,5 @@
 .row
   = render 'form', trial: @trial, ranks: @committee.ranks,
   environments: @committee.environments
+
+= render 'formal_conditions_modal'
