general fixes and adjustments to formsub#12
adds message to pending trial in permitted trials get, improves trial
referer (on validation), adjust to no meeting in registration
(registration deleted), fix scroll to tasks (even when some tasks are
created)

--- a/app/views/trials/_form.html.haml
+++ b/app/views/trials/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for [@committee, trial] do |f|
-  - if params[:redirect_url].present?
+  - if params[:redirect_url].present? || trial.referer.present?
     = f.hidden_field(:referer, value: params[:redirect_url])
   - if trial.errors.any?
     .container-fluid
