--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,8 +34,12 @@
                 class: 'nav-link'
           - if @committee.present? && @committee.persisted?
             %li.nav-item
-              = link_to t(:meetings), formsub_committee_url,
-              class: 'nav-link'
+              - if current_user.present?
+                = link_to t(:meetings), formsub_committee_url,
+                class: 'nav-link'
+              - else
+                = link_to t(:meetings), formsub_meetings_url,
+                class: 'nav-link'
         - if current_user.present?
           %ul.navbar-nav.ml-auto
             %li.nav-item
