--- a/app/views/committees/_form.html.haml
+++ b/app/views/committees/_form.html.haml
@@ -35,7 +35,8 @@
       { include_blank: true }, class: 'custom-select form-control'
     .field.form-group
       = f.label :formal_conditions
-      = f.text_area :formal_conditions, class: 'form-control'
+      = f.text_area :formal_conditions, class: 'form-control',
+      value: committee.formal_conditions.lines.each(&:squish!).join("\n")
       %small.form-text.text-muted
         = t('committee_form.formal_conditions.description')
     .field.form-group
