--- a/app/views/committees/show.html.haml
+++ b/app/views/committees/show.html.haml
@@ -89,7 +89,7 @@
     .col-md-6.col-lg-4
       .ls40.hidden-md-up
       %h2= t(:recent_activity)
-      - @committee.comments.last(5).each do |comment|
+      - @committee.comments.last(5).reverse.each do |comment|
         :plain
           #{l(comment.created_at, format: :long)}
           #{comment.user&.email || t(:candidate) + ':' unless \
