--- a/app/views/trials/_comment_form.html.haml
+++ b/app/views/trials/_comment_form.html.haml
@@ -1,7 +1,8 @@
 = form_for :trial_comment, url: committee_trial_comment_path(@committee,
 trial) do |f|
   .field.form-group
-    = f.text_area :body, class: 'form-control'
+    = f.hidden_field :body
+    %trix-editor{ input: 'trial_comment_body' }
   .field.form-group.float-left{ 'data-toggle': 'buttons' }
     - if current_user.present?
       = f.label :role, class: 'btn btn-outline-primary' do
