--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the trials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul.nav.nav-tabs#landing-tabs {
+  margin-bottom: 0px;
+  border-bottom: 0px;
+}
